change title and about image

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Chemistry Classes by Mamta Shukla</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free Website Template" name="keywords">
-    <meta content="Free Website Template" name="description">
+    <meta content="Chemistry Classes by Dr. Mamta Shukla" name="keywords">
+    <meta content="Chemistry Classes by Dr. Mamta Shukla" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -62,7 +62,7 @@
                     <div class="hero-content">
                         <div class="hero-text">
                             <p>Study Chemistry From</p>
-                            <h1>Mamta Shukla</h1>
+                            <h1>Dr. Mamta Shukla</h1>
                             <h2></h2>
                             <div class="typed-text">IIT-JEE, NEET, XIIth, XIth</div>
                         </div>
