--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Chemistry Classes by Mamta Shukla</title>
+    <title>Chemistry Classes by Dr. Mamta Shukla</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Chemistry Classes by Dr. Mamta Shukla" name="keywords">
     <meta content="Chemistry Classes by Dr. Mamta Shukla" name="description">
@@ -41,11 +41,11 @@
                     <a href="#about" class="nav-item nav-link">About</a>
                     <a href="#service" class="nav-item nav-link">Service</a>
                     <a href="#experience" class="nav-item nav-link">Experience</a>
-                    <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
-                    <a href="#price" class="nav-item nav-link">Price</a>
-                    <a href="#review" class="nav-item nav-link">Review</a>
-                    <a href="#team" class="nav-item nav-link">Team</a>
-                    <a href="#blog" class="nav-item nav-link">Blog</a>
+                    <a href="#videos" class="nav-item nav-link">Class Videos</a>
+                    <!-- <a href="#price" class="nav-item nav-link">Price</a> -->
+                    <a href="#review" class="nav-item nav-link">Testimonials</a>
+                    <!-- <a href="#team" class="nav-item nav-link">Team</a> -->
+                    <!-- <a href="#blog" class="nav-item nav-link">Blog</a> -->
                     <a href="#contact" class="nav-item nav-link">Contact</a>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                         </div>
                         <div class="hero-btn">
                             <!-- <a class="btn" href="">Hire Me</a> -->
-                            <a class="btn" href="">Contact Me</a>
+                            <a class="btn" href="#contact">Contact Me</a>
                         </div>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
         <div class="container">
             <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
                 <p>What I do</p>
-                <h2>Awesome Chemistry Class</h2>
+                <h2>Batches</h2>
             </div>
             <div class="row">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.0s">
@@ -313,7 +313,7 @@
 
 
     <!-- Banner Start -->
-    <div class="banner wow zoomIn" data-wow-delay="0.1s">
+    <!-- <div class="banner wow zoomIn" data-wow-delay="0.1s">
         <div class="container">
             <div class="section-header text-center">
                 <p>Reasonable Price</p>
@@ -328,12 +328,12 @@
                 <a class="btn">Pricing Plan</a>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Banner End -->
 
 
     <!-- Portfolio Start -->
-    <div class="portfolio" id="portfolio">
+    <div class="portfolio" id="videos">
         <div class="container">
             <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
                 <p>Online Class</p>
@@ -448,7 +448,7 @@
 
 
     <!-- Banner Start -->
-    <div class="banner wow zoomIn" data-wow-delay="0.1s">
+    <!-- <div class="banner wow zoomIn" data-wow-delay="0.1s">
         <div class="container">
             <div class="section-header text-center">
                 <p>Awesome Discount</p>
@@ -462,12 +462,12 @@
                 <a class="btn">Order Now</a>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Banner End -->
 
 
     <!-- Price Start -->
-    <div class="price" id="price">
+    <!-- <div class="price" id="price">
         <div class="container">
             <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
                 <p>Pricing Plan</p>
@@ -560,7 +560,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Price End -->
 
 
@@ -627,7 +627,7 @@
 
 
     <!-- Team Start -->
-    <div class="team" id="team">
+    <!-- <div class="team" id="team">
         <div class="container">
             <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
                 <p>My Team</p>
@@ -673,8 +673,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <!-- <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.4s">
+                </div> -->
+    <!-- <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="team-item">
                         <div class="team-img">
                             <img src="img/team-3.jpg" alt="Image">
@@ -714,9 +714,9 @@
                         </div>
                     </div>
                 </div> -->
-            </div>
-        </div>
-    </div>
+    <!-- </div> -->
+    <!-- </div> -->
+    <!-- </div> -->
     <!-- Team End -->
 
 
@@ -724,11 +724,18 @@
     <div class="contact wow fadeInUp" data-wow-delay="0.1s" id="contact">
         <div class="container-fluid">
             <div class="container">
+                <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
+                    <p>Get in Touch</p>
+                    <h2>Contact</h2>
+                </div>
+                <!-- <div class="section-header text-center">
+                    <h2>Get In Touch</h2>
+                </div> -->
                 <div class="row align-items-center">
-                    <div class="col-md-4"></div>
-                    <div class="col-md-8">
+                    <!-- <div class="col-md-4"></div> -->
+                    <div class="col-md-12">
                         <div class="contact-form">
-                            <div id="success"></div>
+                            <!-- <div id="success"></div> -->
                             <form name="sentMessage" id="contactForm" action="https://formspree.io/f/moqyyell"
                                 method="post">
                                 <div class="control-group">
@@ -756,7 +763,7 @@
                                     <p class="help-block"></p>
                                 </div>
                                 <div>
-                                    <button class="btn" type="submit">Send Message</button>
+                                    <button class="btn align-items-center" type="submit">Send Message</button>
                                 </div>
                             </form>
                         </div>
