--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             </div> -->
                             </ul>
                         </div>
-                        <a class="btn" href="">Check Sample Classes</a>
+                        <a class="btn" href="#videos">Check Sample Classes</a>
                     </div>
                 </div>
             </div>
