--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 <div class="navbar-nav ml-auto">
                     <a href="#home" class="nav-item nav-link active">Home</a>
                     <a href="#about" class="nav-item nav-link">About</a>
-                    <a href="#service" class="nav-item nav-link">Service</a>
+                    <a href="#batches" class="nav-item nav-link">Batches</a>
                     <a href="#experience" class="nav-item nav-link">Experience</a>
-                    <a href="#videos" class="nav-item nav-link">Class Videos</a>
+                    <a href="#videos" class="nav-item nav-link">Demo</a>
                     <!-- <a href="#price" class="nav-item nav-link">Price</a> -->
                     <a href="#review" class="nav-item nav-link">Testimonials</a>
                     <!-- <a href="#team" class="nav-item nav-link">Team</a> -->
@@ -96,12 +96,13 @@
                     <div class="about-content">
                         <div class="section-header text-left">
                             <p>Learn About Me</p>
-                            <h2>25 Years Experience</h2>
+                            <h2>30 Years Experience</h2>
                         </div>
                         <div class="about-text">
+                            <h5>UGC JRF NET GATE Qualified</h5>
                             <p>
-                                With Over 25 years of overall teaching experience, I have been teaching chemistry to
-                                JEE/NEET aspirants for 20 years. I have guided over 500 students to crack competitive
+                                With over 30 years of experience, I have been teaching chemistry to
+                                JEE/NEET aspirants for 25 years. I have guided over 5000 students to crack competitive
                                 exams and achieve their dreams.
                             </p>
                         </div>
@@ -119,7 +120,7 @@
                             </div> -->
                                 <li>
                                     <!-- <div class="skill-name"> -->
-                                    <p>Discussions</p>
+                                    <p>Doubt Sessions and 1-on-1 Help</p>
                                     <!-- <p>95%</p> -->
                                     <!-- </div> -->
                                 </li>
@@ -149,7 +150,7 @@
                             </div> -->
                             </ul>
                         </div>
-                        <a class="btn" href="#videos">Check Sample Classes</a>
+                        <a class="btn" href="#videos">View Demo Classes</a>
                     </div>
                 </div>
             </div>
@@ -159,22 +160,22 @@
 
 
     <!-- Service Start -->
-    <div class="service" id="service">
+    <div class="service" id="batches">
         <div class="container">
             <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
-                <p>What I do</p>
-                <h2>Batches</h2>
+                <p>Offerings</p>
+                <h2>Batches At a Glance</h2>
             </div>
             <div class="row">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.0s">
                     <div class="service-item">
                         <div class="service-icon">
-                            <i class="fa fa-laptop"></i>
+                            <i class="fa fa-atom"></i>
                         </div>
                         <div class="service-text">
                             <h3>IIT-JEE Mains and Advanced 2 years course</h3>
                             <p>
-                                Gear up your child for IITJEE mains and advanced level. Special attention is paid
+                                Gear up your child for IIT-JEE Mains and Advanced level. Special attention is paid
                                 towards nurturing the core concepts so that students can tackle problems on their own.
                             </p>
                         </div>
@@ -183,7 +184,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="service-item">
                         <div class="service-icon">
-                            <i class="fa fa-laptop-code"></i>
+                            <i class="fa fa-burn"></i>
                         </div>
                         <div class="service-text">
                             <h3>NEET Preparation</h3>
@@ -196,10 +197,10 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="service-item">
                         <div class="service-icon">
-                            <i class="fab fa-android"></i>
+                            <i class="fas fa-flask"></i>
                         </div>
                         <div class="service-text">
-                            <h3>XIIth boards exam prep</h3>
+                            <h3>XIIth Boards Exam Preparation</h3>
                             <p>
                                 A comparatively lighter class, covers the topics in accordance with the school syllabus.
                                 Though the topics are picked according to NCERT books, special care is taken that
@@ -212,10 +213,10 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.6s">
                     <div class="service-item">
                         <div class="service-icon">
-                            <i class="fab fa-apple"></i>
+                            <i class="fas fa-stopwatch"></i>
                         </div>
                         <div class="service-text">
-                            <h3>Carsh Course</h3>
+                            <h3>Crash Course</h3>
                             <p>
                                 A 2 month, on demand course to brush up concepts real quick.
                             </p>
@@ -232,13 +233,13 @@
     <div class="experience" id="experience">
         <div class="container">
             <header class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
-                <p>My Resume</p>
-                <h2>Working Experience</h2>
+                <p>Timeline</p>
+                <h2>Work Experience</h2>
             </header>
             <div class="timeline">
-                <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
+                <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
                     <div class="timeline-text">
-                        <div class="timeline-date">2045 - 2050</div>
+                        <div class="timeline-date">2020 - Present</div>
                         <h2>Online Classes</h2>
                         <h4>Across India</h4>
                         <p>
@@ -246,9 +247,9 @@
                         </p>
                     </div>
                 </div>
-                <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
+                <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                     <div class="timeline-text">
-                        <div class="timeline-date">2045 - 2050</div>
+                        <div class="timeline-date">2020 - 2021</div>
                         <h2>Motion Classes</h2>
                         <h4>CMS Maha Nagar, Lucknow</h4>
                         <p>
@@ -256,53 +257,63 @@
                         </p>
                     </div>
                 </div>
-                <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
+                <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
                     <div class="timeline-text">
-                        <div class="timeline-date">2045 - 2050</div>
+                        <div class="timeline-date">2011 - 2014</div>
                         <h2>SFA Academy</h2>
                         <h4>Indira Nagar/ Gomti Nagar, Lucknow</h4>
                         <p>
-                            Joint venture with two other faculties to offer PCM at one place.
-                        </p>
-                    </div>
-                </div>
-                <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
-                    <div class="timeline-text">
-                        <div class="timeline-date">2045 - 2050</div>
-                        <h2>FITJEE</h2>
-                        <h4>South, Northwest Delhi, New Delhi</h4>
-                        <p>
-                            Chemistry HOD, All India Test Series Incharge (Chemistry)
+                            Joint venture with Physics & Maths faculties
                         </p>
                     </div>
                 </div>
                 <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                     <div class="timeline-text">
-                        <div class="timeline-date">2045 - 2050</div>
+                        <div class="timeline-date">2009 - 2011</div>
+                        <h2>Chemistry Coaching</h2>
+                        <h4>Lucknow</h4>
+                        <p>
+                            XIth, XIIth, IITJEE, NEET Classes
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
+                    <div class="timeline-text">
+                        <div class="timeline-date">2001 - 2009</div>
+                        <h2>FITJEE</h2>
+                        <h4>Delhi, Lucknow</h4>
+                        <p>
+                            Chemistry Professor, Admission Test All India Incharge for Chemistry
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
+                    <div class="timeline-text">
+                        <div class="timeline-date">1997 - 2001</div>
+                        <h2>Chemistry Coaching</h2>
+                        <h4>Unnao</h4>
+                        <p>
+                            XIth, XIIth, IITJEE, NEET
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
+                    <div class="timeline-text">
+                        <div class="timeline-date">1996 - 1997</div>
                         <h2>St. Judes College</h2>
                         <h4>Unnao</h4>
                         <p>
-                            Chemisty class XIIth.
-                        </p>
-                    </div>
-                </div>
-                <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
-                    <div class="timeline-text">
-                        <div class="timeline-date">2045 - 2050</div>
-                        <h2>Personal Tuitions</h2>
-                        <h4>Unnao</h4>
-                        <p>
-                            Class Xith, class XIIth, IITJEE prep
+                            Chemisty for Senior Secondary students
                         </p>
                     </div>
                 </div>
                 <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                     <div class="timeline-text">
-                        <div class="timeline-date">2045 - 2050</div>
-                        <h2>Assistant Lecturer</h2>
+                        <div class="timeline-date">1990 - 1993</div>
+                        <h2>All Saints College</h2>
                         <h4>Kumaon University</h4>
                         <p>
-                            PHD
+                            Lecturer
                         </p>
                     </div>
                 </div>
@@ -337,7 +348,7 @@
         <div class="container">
             <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
                 <p>Online Class</p>
-                <h2>Sample Classes</h2>
+                <h2>Demo Classes</h2>
             </div>
             <div class="row">
                 <div class="col-12">
