--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
 
 
     <!-- Testimonial Start -->
-    <div class="testimonial wow fadeInUp" data-wow-delay="0.1s" id="review">
+    <!-- <div class="testimonial wow fadeInUp" data-wow-delay="0.1s" id="review">
         <div class="container">
             <div class="testimonial-icon">
                 <i class="fa fa-quote-left"></i>
@@ -633,7 +633,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Testimonial End -->
 
 
@@ -855,18 +855,18 @@
                         <p>+91-9415313883</p>
                         <p>chemmamta@gmail.com</p>
                     </div>
-                    <div class="footer-social">
+                    <!-- <div class="footer-social">
                         <a href=""><i class="fab fa-twitter"></i></a>
                         <a href=""><i class="fab fa-facebook-f"></i></a>
                         <a href=""><i class="fab fa-youtube"></i></a>
                         <a href=""><i class="fab fa-instagram"></i></a>
                         <a href=""><i class="fab fa-linkedin-in"></i></a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="container copyright">
                 <p>&copy; <a href="#">Chemistry Classes by Mamta Shukla</a>, All Right Reserved | Designed By <a
-                        href="https://htmlcodex.com">HTML Codex</a></p>
+                        href="https://htmlcodex.com" target="_blank">HTML Codex</a></p>
             </div>
         </div>
     </div>
