--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="hero" id="home">
         <div class="container-fluid">
             <div class="row align-items-center">
-                <div class="col-sm-12 col-md-6">
+                <div class="col-12">
                     <div class="hero-content">
                         <div class="hero-text">
                             <p>Study Chemistry From</p>
@@ -68,7 +68,7 @@
                         </div>
                         <div class="hero-btn">
                             <!-- <a class="btn" href="">Hire Me</a> -->
-                            <a class="btn" href="#contact">Contact Me</a>
+                            <a class="btn" href="#contact">Contact</a>
                         </div>
                     </div>
                 </div>
