fix width for >= medium screen

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="hero" id="home">
         <div class="container-fluid">
             <div class="row align-items-center">
-                <div class="col-12">
+                <div class="col-sm-12 col-md-12">
                     <div class="hero-content">
                         <div class="hero-text">
                             <p>Study Chemistry From</p>
