--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="about-content">
                         <div class="section-header text-left">
                             <p>Learn About Me</p>
-                            <h2>30 Years Experience</h2>
+                            <h2>30+ Years Experience</h2>
                         </div>
                         <div class="about-text">
                             <h5>UGC JRF NET GATE Qualified</h5>
